syntax = "proto3";

package pb;

import "recipe.proto";

option go_package = "github.com/Remxin/home-life/server/pb";

message UpdateRecipeRequest {
    string id = 1;
    optional bool public = 2;
    optional string title = 3;
    optional string description = 4;
    optional string iframe_link = 5;
    optional string image_link = 6;
}

message UpdateRecipeResponse {
    Recipe recipe = 1;
}